@@ -6,10 +6,28 @@ var Thoth = function () {
       yud = yut.Dom,
       yue = yut.Event;
 
+  // -- Constants --------------------------------------------------------------
+
+  /**
+   * URLs for lazy-loaded JavaScript dependencies.
+   *
+   * @const js
+   * @type Object
+   * @private
+   */
+  var js = {
+    thoth: {
+      comments   : '/js/admin/comments.js',
+      tagcomplete: '/js/admin/tagcomplete.js'
+    },
+    yui: {
+      conn_json: 'http://yui.yahooapis.com/combo?2.5.2/build/connection/connection-min.js&2.5.2/build/json/json-min.js'
+    }
+  };
+
   // -- Private Variables ------------------------------------------------------
   var hotKeys = {},
-      next,
-      prev;
+      next, prev, token;
 
   // -- Private Methods --------------------------------------------------------
 
@@ -27,11 +45,11 @@ var Thoth = function () {
     next = yud.get('next_url');
     prev = yud.get('prev_url');
 
-    hotKeys['ctrl_alt_a'] = new yut.KeyListener(d,
+    hotKeys.ctrl_alt_a = new yut.KeyListener(d,
         { ctrl: true, alt: true, keys: 65 }, Thoth.toggleAdminToolbar);
 
-    hotKeys['n'] = new yut.KeyListener(d, { keys: 78 }, handleKeyNext);
-    hotKeys['p'] = new yut.KeyListener(d, { keys: 80 }, handleKeyPrev);
+    hotKeys.n = new yut.KeyListener(d, { keys: 78 }, handleKeyNext);
+    hotKeys.p = new yut.KeyListener(d, { keys: 80 }, handleKeyPrev);
 
     // Stop listening for hotkeys when a form element gets focus.
     yue.on(inputs, 'blur', enableKeys, Thoth, true);
@@ -54,7 +72,7 @@ var Thoth = function () {
     var key;
 
     for (key in hotKeys) {
-      if (hotKeys.hasOwnProperty(key) && key != 'ctrl_alt_a') {
+      if (hotKeys.hasOwnProperty(key) && key !== 'ctrl_alt_a') {
         hotKeys[key].disable();
       }
     }
@@ -103,25 +121,52 @@ var Thoth = function () {
   }
 
   return {
+    // -- Constants ------------------------------------------------------------
+
+    /**
+     * URLs for lazy-loaded JavaScript dependencies.
+     *
+     * @const js
+     * @type Object
+     */
+    js: js,
+
     // -- Public Methods -------------------------------------------------------
 
     /**
      * Initializes the Thoth module.
      *
      * @method init
-     * @param {Boolean} admin whether or not we're in admin mode
+     * @param {Boolean} admin (optional) whether or not we're in admin mode
+     * @param {String} formToken (optional) admin form token for this request
      */
-    init: function (admin) {
+    init: function (admin, formToken) {
       attachKeys();
 
-      // Load the TagComplete module if this page contains one or more tag input
-      // elements.
-      if (admin && yud.getElementsByClassName('tags-input', 'input').length) {
-        LazyLoad.loadOnce([
-          'http://yui.yahooapis.com/combo?2.5.2/build/connection/connection-min.js&2.5.2/build/json/json-min.js',
-          '/js/admin/tagcomplete.js'
-        ]);
+      if (admin) {
+        token = formToken;
+
+        // Load the TagComplete module if this page contains one or more tag
+        // input elements.
+        if (yud.getElementsByClassName('tags-input', 'input').length) {
+          LazyLoad.loadOnce([js.yui.conn_json, js.thoth.tagcomplete]);
+        }
+
+        // Load the Comments module if this page contains comments.
+        if (yud.get('comments')) {
+          LazyLoad.loadOnce([js.yui.conn_json, js.thoth.comments]);
+        }
       }
+    },
+
+    /**
+     * Gets the administrator form token for this request, if any.
+     *
+     * @method getToken
+     * @return {String|null} form token, or <i>null</i> if user is not an admin
+     */
+    getToken: function () {
+      return token;
     },
 
     /**
