@@ -1,4 +1,4 @@
 <script type="text/javascript" src="http://yui.yahooapis.com/2.5.2/build/yahoo-dom-event/yahoo-dom-event.js"></script>
 <script type="text/javascript" src="/js/lazyload-min.js"></script>
 <script type="text/javascript" src="/js/thoth.js"></script>
-<script type="text/javascript">Thoth.init(<%== auth_key_valid? %>);</script>
+<script type="text/javascript">Thoth.init(<%== auth_key_valid? ? "true, '#{form_token}'" : '' %>);</script>
