@@ -7,6 +7,8 @@ Version 0.2.1 (?)
   * Requires RedCloth 4.0.x. Markdown syntax is no longer supported as a result.
   * Names of existing tags are now suggested as you type in the "Tags" field
     when creating or editing a blog post.
+  * Comments are now deleted via Ajax when JavaScript is enabled, making it
+    easier to delete multiple comments without having to reload the page.
   * A rel="nofollow" attribute is now automatically added to links in user
     comments.
   * When minification is enabled, filenames in the public /css and /js
